--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.4.0",
     "morgan": "^1.10.0",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -37,6 +38,7 @@
     "@types/morgan": "^1.9.4",
     "@types/node": "18.16.12",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^8.0.1",
