--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
     "axios": "^1.4.0",
     "morgan": "^1.10.0",
     "rxjs": "^7.2.0",
+    "swagger-ui-express": "^4.6.3",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
